# Prac_7sem

./: README.md
task_1/: Addons.xcu  addon.cxx  addon.hxx  component.cxx
task_2/: .gitignore  1.xml  Makefile  gen2.txt  gen2.xml  gen_parameters4.txt  generate  genxml.cpp  genxml.h  main.cpp  main1.cpp  mutation.cpp  mutation.h  res.txt  simulated  solution.cpp  solution.h  startio.h  task.h  temperature.h
task_3/: CMakeLists.txt  lib.h  main.cpp  ut.cpp
task_4/: Makefile  after.ipynb  before.ipynb  ga.cpp  gameoflife.h  genetic.h
